@@ -12,6 +12,7 @@ Added GUI styles: BeOS, Bloody, Grass, Ocean, Sunny, Panther, Sky
 Added Fuzix ide image on the zesarux-extras package
 Added ZSF snapshot support for Jupiter Ace, Z88
 Added --slotcard-num setting to insert a Z88 card in a numbered slot (1, 2 or 3)
+Added ZRCP command mmc-reload to reload MMC image
 
 
 Improved Find menu: now can find several bytes and open Hexadecimal Editor on the results list
